# FluentWeb

./: .gitignore  Cargo.toml  Makefile.toml  check.sh  flake.nix  result  test.sh  tests.sh
TEST_FOLDER/: Cargo.toml
TestProject/: Cargo.toml
TestProject/src_fluent/: attributes.fluent  attributes_sub.fluent  events.fluent  events_sub.fluent  if_sub.fluent  ifs.fluent  lib.rs  simple_rendering.fluent  styling.fluent  styling_sub.fluent
TestTemplate/: Cargo.toml  index.html
fluent_web/: Cargo.toml
fluent_web/proptest-regressions/compiler/: utils.txt
fluent_web/src/: error.rs  main.rs  prelude.rs
fluent_web/src/compiler/: computed_attribute.rs  conditional_attr.rs  custom_events.rs  data_and_props.rs  event_listen.rs  generics.rs  ifs.rs  mod.rs  reactive_text.rs  style.rs  subcomponent.rs  utils.rs
fluent_web_client/: Cargo.toml
fluent_web_client/src/: internal.rs  lib.rs
fluent_web_runtime/: Cargo.toml
fluent_web_runtime/src/: internal.rs  lib.rs
test_project/: Cargo.toml  Trunk.toml  index.html
test_project/src/: AppModule.rs  InputModule.rs  SubModule.rs  WrapperModule.rs  main.rs
test_project/src_fluent/: App.fluent  Input.fluent  Sub.fluent  Wrapper.fluent  main.rs
tests/attributes/: Cargo.toml
tests/attributes/src_fluent/: App.fluent  Sub.fluent  main.rs
tests/attributes/tests/: test.rs
tests/events/: Cargo.toml
tests/events/src_fluent/: App.fluent  Sub.fluent
tests/events/tests/: test.rs
tests/generic/: Cargo.toml
tests/generic/src_fluent/: App.fluent  Sub1.fluent  Sub2.fluent  Sub3.fluent  main.rs
tests/generic/tests/: test.rs
tests/ifs/: Cargo.toml
tests/ifs/src_fluent/: App.fluent  Sub.fluent
tests/ifs/tests/: test.rs
tests/simple_rendering/: Cargo.toml
tests/simple_rendering/src_fluent/: App.fluent  main.rs
tests/simple_rendering/tests/: test.rs
tests/styling/: Cargo.toml
tests/styling/src_fluent/: App.fluent  Sub.fluent  main.rs
tests/styling/tests/: test.rs
tests/unpack_macro/: Cargo.toml
tests/unpack_macro/src_fluent/: App.fluent  main.rs
tests/unpack_macro/tests/: test.rs
