[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent_web_runtime = { version = "*", path = "../fluent_web_runtime"}
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Document", "Window", "Element", "HtmlElement", "CssStyleDeclaration"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
