[package]
name = "fluent_web"
version = "0.3.11"
edition = "2021"
description = "SFC frontend web framework for rust!"
license = "MIT"
repository = "https://github.com/vivax3794/FluentWeb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
html5ever = "0.26.0"
kuchikiki = "0.8.2"
lightningcss = { version = "1.0.0-alpha.46", default-features = false, features = [
    "visitor",
    "grid",
] }
markup5ever = "0.11.0"
prettyplease = "0.2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
template-quote = "0.3.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
    "parsing",
    "printing",
    "proc-macro",
    "full",
    "clone-impls",
] }
uuid = { version = "1.4", features = ["v4"] }
miette = { version = "5.10.0", features = ["fancy"] }

[dev-dependencies]
proptest = "1.0"
